simtk/openmm/7.1/build/simtk/openmm/OpenMMAmoebaLibrary.java

package simtk.openmm;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import com.sun.jna.PointerType;
import com.sun.jna.ptr.DoubleByReference;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.PointerByReference;
import java.nio.DoubleBuffer;
import java.nio.IntBuffer;
/**
 * JNA Wrapper for library <b>OpenMMAmoeba</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public interface OpenMMAmoebaLibrary extends Library {
	public static final String JNA_LIBRARY_NAME = "OpenMMAmoeba";
	public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(OpenMMAmoebaLibrary.JNA_LIBRARY_NAME);
	public static final OpenMMAmoebaLibrary INSTANCE = (OpenMMAmoebaLibrary)Native.loadLibrary(OpenMMAmoebaLibrary.JNA_LIBRARY_NAME, OpenMMAmoebaLibrary.class);
	/** enum values */
	public static interface OpenMM_AmoebaMultipoleForce_NonbondedMethod {
		public static final int OpenMM_AmoebaMultipoleForce_NoCutoff = 0;
		public static final int OpenMM_AmoebaMultipoleForce_PME = 1;
	};
	/** enum values */
	public static interface OpenMM_AmoebaMultipoleForce_PolarizationType {
		public static final int OpenMM_AmoebaMultipoleForce_Mutual = 0;
		public static final int OpenMM_AmoebaMultipoleForce_Direct = 1;
		public static final int OpenMM_AmoebaMultipoleForce_Extrapolated = 2;
	};
	/** enum values */
	public static interface OpenMM_AmoebaMultipoleForce_MultipoleAxisTypes {
		public static final int OpenMM_AmoebaMultipoleForce_ZThenX = 0;
		public static final int OpenMM_AmoebaMultipoleForce_Bisector = 1;
		public static final int OpenMM_AmoebaMultipoleForce_ZBisect = 2;
		public static final int OpenMM_AmoebaMultipoleForce_ThreeFold = 3;
		public static final int OpenMM_AmoebaMultipoleForce_ZOnly = 4;
		public static final int OpenMM_AmoebaMultipoleForce_NoAxisType = 5;
		public static final int OpenMM_AmoebaMultipoleForce_LastAxisTypeIndex = 6;
	};
	/** enum values */
	public static interface OpenMM_AmoebaMultipoleForce_CovalentType {
		public static final int OpenMM_AmoebaMultipoleForce_Covalent12 = 0;
		public static final int OpenMM_AmoebaMultipoleForce_Covalent13 = 1;
		public static final int OpenMM_AmoebaMultipoleForce_Covalent14 = 2;
		public static final int OpenMM_AmoebaMultipoleForce_Covalent15 = 3;
		public static final int OpenMM_AmoebaMultipoleForce_PolarizationCovalent11 = 4;
		public static final int OpenMM_AmoebaMultipoleForce_PolarizationCovalent12 = 5;
		public static final int OpenMM_AmoebaMultipoleForce_PolarizationCovalent13 = 6;
		public static final int OpenMM_AmoebaMultipoleForce_PolarizationCovalent14 = 7;
		public static final int OpenMM_AmoebaMultipoleForce_CovalentEnd = 8;
	};
	/** enum values */
	public static interface OpenMM_AmoebaVdwForce_NonbondedMethod {
		public static final int OpenMM_AmoebaVdwForce_NoCutoff = 0;
		public static final int OpenMM_AmoebaVdwForce_CutoffPeriodic = 1;
	};
	/** Global Constants */
	public static final double OpenMM_NmPerAngstrom = 0.1;
	public static final double OpenMM_AngstromsPerNm = 10.0;
	public static final double OpenMM_PsPerFs = 0.001;
	public static final double OpenMM_FsPerPs = 1000.0;
	public static final double OpenMM_KJPerKcal = 4.184;
	public static final double OpenMM_KcalPerKJ = 1.0 / 4.184;
	public static final double OpenMM_RadiansPerDegree = 3.1415926535897932385 / 180.0;
	public static final double OpenMM_DegreesPerRadian = 180.0 / 3.1415926535897932385;
	public static final double OpenMM_SigmaPerVdwRadius = 1.7817974362806786095;
	/**
	 * OpenMM_3D_DoubleArray<br>
	 * Original signature : <code>OpenMM_3D_DoubleArray* OpenMM_3D_DoubleArray_create(int, int, int)</code>
	 */
	PointerByReference OpenMM_3D_DoubleArray_create(int size1, int size2, int size3);
	/**
	 * Original signature : <code>void OpenMM_3D_DoubleArray_set(OpenMM_3D_DoubleArray*, int, int, OpenMM_DoubleArray*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_3D_DoubleArray_set(com.sun.jna.ptr.PointerByReference, int, int, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_3D_DoubleArray_set(Pointer array, int index1, int index2, Pointer values);
	/** Original signature : <code>void OpenMM_3D_DoubleArray_set(OpenMM_3D_DoubleArray*, int, int, OpenMM_DoubleArray*)</code> */
	void OpenMM_3D_DoubleArray_set(PointerByReference array, int index1, int index2, PointerByReference values);
	/**
	 * Original signature : <code>void OpenMM_3D_DoubleArray_destroy(OpenMM_3D_DoubleArray*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_3D_DoubleArray_destroy(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_3D_DoubleArray_destroy(Pointer array);
	/** Original signature : <code>void OpenMM_3D_DoubleArray_destroy(OpenMM_3D_DoubleArray*)</code> */
	void OpenMM_3D_DoubleArray_destroy(PointerByReference array);
	/**
	 * AmoebaAngleForce<br>
	 * Original signature : <code>OpenMM_AmoebaAngleForce* OpenMM_AmoebaAngleForce_create()</code>
	 */
	PointerByReference OpenMM_AmoebaAngleForce_create();
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleForce_destroy(OpenMM_AmoebaAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_destroy(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleForce_destroy(Pointer target);
	/** Original signature : <code>void OpenMM_AmoebaAngleForce_destroy(OpenMM_AmoebaAngleForce*)</code> */
	void OpenMM_AmoebaAngleForce_destroy(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaAngleForce_getNumAngles(const OpenMM_AmoebaAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_getNumAngles(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaAngleForce_getNumAngles(Pointer target);
	/** Original signature : <code>int OpenMM_AmoebaAngleForce_getNumAngles(const OpenMM_AmoebaAngleForce*)</code> */
	int OpenMM_AmoebaAngleForce_getNumAngles(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleCubic(OpenMM_AmoebaAngleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleCubic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleCubic(Pointer target, double cubicK);
	/** Original signature : <code>void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleCubic(OpenMM_AmoebaAngleForce*, double)</code> */
	void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleCubic(PointerByReference target, double cubicK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleCubic(const OpenMM_AmoebaAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleCubic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleCubic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleCubic(const OpenMM_AmoebaAngleForce*)</code> */
	double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleCubic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleQuartic(OpenMM_AmoebaAngleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleQuartic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleQuartic(Pointer target, double quarticK);
	/** Original signature : <code>void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleQuartic(OpenMM_AmoebaAngleForce*, double)</code> */
	void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleQuartic(PointerByReference target, double quarticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleQuartic(const OpenMM_AmoebaAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleQuartic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleQuartic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleQuartic(const OpenMM_AmoebaAngleForce*)</code> */
	double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleQuartic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleForce_setAmoebaGlobalAnglePentic(OpenMM_AmoebaAngleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_setAmoebaGlobalAnglePentic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleForce_setAmoebaGlobalAnglePentic(Pointer target, double penticK);
	/** Original signature : <code>void OpenMM_AmoebaAngleForce_setAmoebaGlobalAnglePentic(OpenMM_AmoebaAngleForce*, double)</code> */
	void OpenMM_AmoebaAngleForce_setAmoebaGlobalAnglePentic(PointerByReference target, double penticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaAngleForce_getAmoebaGlobalAnglePentic(const OpenMM_AmoebaAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_getAmoebaGlobalAnglePentic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaAngleForce_getAmoebaGlobalAnglePentic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaAngleForce_getAmoebaGlobalAnglePentic(const OpenMM_AmoebaAngleForce*)</code> */
	double OpenMM_AmoebaAngleForce_getAmoebaGlobalAnglePentic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleSextic(OpenMM_AmoebaAngleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleSextic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleSextic(Pointer target, double sexticK);
	/** Original signature : <code>void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleSextic(OpenMM_AmoebaAngleForce*, double)</code> */
	void OpenMM_AmoebaAngleForce_setAmoebaGlobalAngleSextic(PointerByReference target, double sexticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleSextic(const OpenMM_AmoebaAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleSextic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleSextic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleSextic(const OpenMM_AmoebaAngleForce*)</code> */
	double OpenMM_AmoebaAngleForce_getAmoebaGlobalAngleSextic(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaAngleForce_addAngle(OpenMM_AmoebaAngleForce*, int, int, int, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_addAngle(com.sun.jna.ptr.PointerByReference, int, int, int, double, double)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaAngleForce_addAngle(Pointer target, int particle1, int particle2, int particle3, double length, double quadraticK);
